--- a/portfolio.html
+++ b/portfolio.html
@@ -16,14 +16,22 @@
       <nav>
         <ul>
           <li><a href="#agencja">Agencja</a></li>
-          <li><a href="#portfolio.html">Portfolio</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#kontakt">Kontakt</a></li>
         </ul>
       </nav>
       <a href="mail:info@devstudio.com">info@devstudio.com</a>
       <a href="tel:+48111111111">+48 111 111 111</a>
     </header>
-    <main></main>
+    <main>
+      <ul>
+        <li><button type="button">Wszystkie</button></li>
+        <li><button type="button">Strony</button></li>
+        <li><button type="button">Aplikacje</button></li>
+        <li><button type="button">Dizajn</button></li>
+        <li><button type="button">Marketing</button></li>
+      </ul>
+    </main>
     <footer>
       <h3><span>Web</span>Studio</h3>
       <address>
