--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <li>
             <img
               src="images/main/section3/1.jpg"
-              alt="zdjecie ososby John Doe."
+              alt="zdjecie osoby John Doe."
               width="270"
               height="260"
             />
@@ -98,7 +98,7 @@
           <li>
             <img
               src="images/main/section3/2.jpg"
-              alt="zdjecie ososby John Doe."
+              alt="zdjecie osoby John Doe."
               width="270"
               height="260"
             />
@@ -108,7 +108,7 @@
           <li>
             <img
               src="images/main/section3/3.jpg"
-              alt="zdjecie ososby John Doe."
+              alt="zdjecie osoby John Doe."
               width="270"
               height="260"
             />
@@ -118,7 +118,7 @@
           <li>
             <img
               src="images/main/section3/4.jpg"
-              alt="zdjecie ososby John Doe."
+              alt="zdjecie osoby John Doe."
               width="270"
               height="260"
             />
