--- a/portfolio.html
+++ b/portfolio.html
@@ -1,44 +1,138 @@
 <!DOCTYPE html>
 <html lang="pl">
-  <head>
-    <meta charset="UTF-8" />
-    <!--co to ?-->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="CSS/styles.css" />
-  </head>
-  <body>
-    <header>
-      <a href="#index.html">
-        <h3><span>Web</span>Studio</h3></a
-      >
-      <nav>
-        <ul>
-          <li><a href="#agencja">Agencja</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#kontakt">Kontakt</a></li>
-        </ul>
-      </nav>
-      <a href="mail:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+48111111111">+48 111 111 111</a>
-    </header>
-    <main>
-      <ul>
-        <li><button type="button">Wszystkie</button></li>
-        <li><button type="button">Strony</button></li>
-        <li><button type="button">Aplikacje</button></li>
-        <li><button type="button">Dizajn</button></li>
-        <li><button type="button">Marketing</button></li>
-      </ul>
-    </main>
-    <footer>
-      <h3><span>Web</span>Studio</h3>
-      <address>
-        m. Warszawa, Aleje Jerozolimskie 21 <br />
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-        <a href="tel:+48111111111">+48 111 111 111</a>
-      </address>
-    </footer>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <!--co to ?-->
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link rel="stylesheet" href="CSS/styles.css" />
+    </head>
+    <body>
+        <header>
+            <a href="index.html">
+                <h3><span>Web</span>Studio</h3></a
+            >
+            <nav>
+                <ul>
+                    <li><a href="#agencja">Agencja</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#kontakt">Kontakt</a></li>
+                </ul>
+            </nav>
+            <a href="mail:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+48111111111">+48 111 111 111</a>
+        </header>
+        <main>
+            <ul>
+                <li><button type="button">Wszystkie</button></li>
+                <li><button type="button">Strony</button></li>
+                <li><button type="button">Aplikacje</button></li>
+                <li><button type="button">Dizajn</button></li>
+                <li><button type="button">Marketing</button></li>
+            </ul>
+            <section>
+                <ul>
+                    <li>
+                        <img
+                            src="images/main/portoflio/1technologia.jpg"
+                            alt="Laptop z wyswietlona strona internetowa"
+                            width="370px"
+                            height="294px"
+                        />
+                        <p>Technocrack</p>
+                        <p>Strona internetowa</p>
+                    </li>
+                    <li>
+                        <img
+                            src="images/main/portoflio/2grafika.jpg"
+                            alt="Laptop z wyswietlona strona internetowa"
+                            width="370px"
+                            height="294px"
+                        />
+                        <p>Grafika New Orlean vs Golden Star</p>
+                        <p>Dizajn</p>
+                    </li>
+                    <li>
+                        <img
+                            src="images/main/portoflio/3restauracja.jpg"
+                            alt="Laptop z wyswietlona strona internetowa"
+                            width="370px"
+                            height="294px"
+                        />
+                        <p>Restauracja Seafood</p>
+                        <p>Aplikacja</p>
+                    </li>
+                    <li>
+                        <img
+                            src="images/main/portoflio/4projektprime.jpg"
+                            alt="Laptop z wyswietlona strona internetowa"
+                            width="370px"
+                            height="294px"
+                        />
+                        <p>Projekt Prime</p>
+                        <p>Marketing</p>
+                    </li>
+                    <li>
+                        <img
+                            src="images/main/portoflio/5projektbox.jpg"
+                            alt="Laptop z wyswietlona strona internetowa"
+                            width="370px"
+                            height="294px"
+                        />
+                        <p>Projekt Boxes</p>
+                        <p>Aplikacja</p>
+                    </li>
+                    <li>
+                        <img
+                            src="images/main/portoflio/6inspiration.jpg"
+                            alt="Laptop z wyswietlona strona internetowa"
+                            width="370px"
+                            height="294px"
+                        />
+                        <p>Inspiration has no Borders</p>
+                        <p>Strona internetowa</p>
+                    </li>
+                    <li>
+                        <img
+                            src="images/main/portoflio/7magazyn.jpg"
+                            alt="Laptop z wyswietlona strona internetowa"
+                            width="370px"
+                            height="294px"
+                        />
+                        <p>Magazyn Limited Edition</p>
+                        <p>Dizajn</p>
+                    </li>
+                    <li>
+                        <img
+                            src="images/main/portoflio/8projektlab.jpg"
+                            alt="Laptop z wyswietlona strona internetowa"
+                            width="370px"
+                            height="294px"
+                        />
+                        <p>Projekt LAB</p>
+                        <p>Marketing</p>
+                    </li>
+                    <li>
+                        <img
+                            src="images/main/portoflio/9growing.jpg"
+                            alt="Laptop z wyswietlona strona internetowa"
+                            width="370px"
+                            height="294px"
+                        />
+                        <p>Growing Business</p>
+                        <p>Aplikacja</p>
+                    </li>
+                </ul>
+            </section>
+        </main>
+        <footer>
+            <h3><span>Web</span>Studio</h3>
+            <address>
+                m. Warszawa, Aleje Jerozolimskie 21 <br />
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
+                <a href="tel:+48111111111">+48 111 111 111</a>
+            </address>
+        </footer>
+    </body>
 </html>
