--- a/portfolio.html
+++ b/portfolio.html
@@ -2,136 +2,180 @@
 <html lang="pl">
     <head>
         <meta charset="UTF-8" />
-        <!--co to ?-->
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
         <link rel="stylesheet" href="CSS/styles.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <header>
-            <a href="index.html">
-                <h3><span>Web</span>Studio</h3></a
+            <a href="index.html" class="logo">
+                <h3><span class="logo-color">Web</span>Studio</h3></a
             >
             <nav>
                 <ul>
-                    <li><a href="#agencja">Agencja</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#kontakt">Kontakt</a></li>
+                    <li><a href="#agencja" class="nav-links">Agencja</a></li>
+                    <li>
+                        <a href="portfolio.html" class="nav-links">Portfolio</a>
+                    </li>
+                    <li><a href="#kontakt" class="nav-links">Kontakt</a></li>
                 </ul>
             </nav>
-            <a href="mail:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+48111111111">+48 111 111 111</a>
+            <a href="mail:info@devstudio.com" class="contact-link"
+                >info@devstudio.com</a
+            >
+            <a href="tel:+48111111111" class="contact-link">+48 111 111 111</a>
         </header>
         <main>
             <ul>
-                <li><button type="button">Wszystkie</button></li>
-                <li><button type="button">Strony</button></li>
-                <li><button type="button">Aplikacje</button></li>
-                <li><button type="button">Dizajn</button></li>
-                <li><button type="button">Marketing</button></li>
+                <li>
+                    <button type="button" class="pointer">Wszystkie</button>
+                </li>
+                <li><button type="button" class="pointer">Strony</button></li>
+                <li>
+                    <button type="button" class="pointer">Aplikacje</button>
+                </li>
+                <li><button type="button" class="pointer">Dizajn</button></li>
+                <li>
+                    <button type="button" class="pointer">Marketing</button>
+                </li>
             </ul>
             <section>
                 <ul>
                     <li>
-                        <img
-                            src="images/main/portoflio/1technologia.jpg"
-                            alt="Laptop z wyswietlona strona internetowa"
-                            width="370px"
-                            height="294px"
-                        />
-                        <p>Technocrack</p>
-                        <p>Strona internetowa</p>
+                        <div>
+                            <img
+                                src="images/main/portoflio/1technologia.jpg"
+                                alt="Laptop z wyswietlona strona internetowa"
+                                width="370px"
+                                height="294px"
+                            />
+                            <p class="product-name">Technocrack</p>
+                            <p class="product-field">Strona internetowa</p>
+                        </div>
                     </li>
                     <li>
-                        <img
-                            src="images/main/portoflio/2grafika.jpg"
-                            alt="Laptop z wyswietlona strona internetowa"
-                            width="370px"
-                            height="294px"
-                        />
-                        <p>Grafika New Orlean vs Golden Star</p>
-                        <p>Dizajn</p>
+                        <div>
+                            <img
+                                src="images/main/portoflio/2grafika.jpg"
+                                alt="Laptop z wyswietlona strona internetowa"
+                                width="370px"
+                                height="294px"
+                            />
+                            <p class="product-name">
+                                Grafika New Orlean vs Golden Star
+                            </p>
+                            <p class="product-field">Dizajn</p>
+                        </div>
                     </li>
                     <li>
-                        <img
-                            src="images/main/portoflio/3restauracja.jpg"
-                            alt="Laptop z wyswietlona strona internetowa"
-                            width="370px"
-                            height="294px"
-                        />
-                        <p>Restauracja Seafood</p>
-                        <p>Aplikacja</p>
+                        <div>
+                            <img
+                                src="images/main/portoflio/3restauracja.jpg"
+                                alt="Laptop z wyswietlona strona internetowa"
+                                width="370px"
+                                height="294px"
+                            />
+                            <p class="product-name">Restauracja Seafood</p>
+                            <p class="product-field">Aplikacja</p>
+                        </div>
                     </li>
                     <li>
-                        <img
-                            src="images/main/portoflio/4projektprime.jpg"
-                            alt="Laptop z wyswietlona strona internetowa"
-                            width="370px"
-                            height="294px"
-                        />
-                        <p>Projekt Prime</p>
-                        <p>Marketing</p>
+                        <div>
+                            <img
+                                src="images/main/portoflio/4projektprime.jpg"
+                                alt="Laptop z wyswietlona strona internetowa"
+                                width="370px"
+                                height="294px"
+                            />
+                            <p class="product-name">Projekt Prime</p>
+                            <p class="product-field">Marketing</p>
+                        </div>
                     </li>
                     <li>
-                        <img
-                            src="images/main/portoflio/5projektbox.jpg"
-                            alt="Laptop z wyswietlona strona internetowa"
-                            width="370px"
-                            height="294px"
-                        />
-                        <p>Projekt Boxes</p>
-                        <p>Aplikacja</p>
+                        <div>
+                            <img
+                                src="images/main/portoflio/5projektbox.jpg"
+                                alt="Laptop z wyswietlona strona internetowa"
+                                width="370px"
+                                height="294px"
+                            />
+                            <p class="product-name">Projekt Boxes</p>
+                            <p class="product-field">Aplikacja</p>
+                        </div>
                     </li>
                     <li>
-                        <img
-                            src="images/main/portoflio/6inspiration.jpg"
-                            alt="Laptop z wyswietlona strona internetowa"
-                            width="370px"
-                            height="294px"
-                        />
-                        <p>Inspiration has no Borders</p>
-                        <p>Strona internetowa</p>
+                        <div>
+                            <img
+                                src="images/main/portoflio/6inspiration.jpg"
+                                alt="Laptop z wyswietlona strona internetowa"
+                                width="370px"
+                                height="294px"
+                            />
+                            <p class="product-name">
+                                Inspiration has no Borders
+                            </p>
+                            <p class="product-field">Strona internetowa</p>
+                        </div>
                     </li>
                     <li>
-                        <img
-                            src="images/main/portoflio/7magazyn.jpg"
-                            alt="Laptop z wyswietlona strona internetowa"
-                            width="370px"
-                            height="294px"
-                        />
-                        <p>Magazyn Limited Edition</p>
-                        <p>Dizajn</p>
+                        <div>
+                            <img
+                                src="images/main/portoflio/7magazyn.jpg"
+                                alt="Laptop z wyswietlona strona internetowa"
+                                width="370px"
+                                height="294px"
+                            />
+                            <p class="product-name">Magazyn Limited Edition</p>
+                            <p class="product-field">Dizajn</p>
+                        </div>
                     </li>
                     <li>
-                        <img
-                            src="images/main/portoflio/8projektlab.jpg"
-                            alt="Laptop z wyswietlona strona internetowa"
-                            width="370px"
-                            height="294px"
-                        />
-                        <p>Projekt LAB</p>
-                        <p>Marketing</p>
+                        <div>
+                            <img
+                                src="images/main/portoflio/8projektlab.jpg"
+                                alt="Laptop z wyswietlona strona internetowa"
+                                width="370px"
+                                height="294px"
+                            />
+                            <p class="product-name">Projekt LAB</p>
+                            <p class="product-field">Marketing</p>
+                        </div>
                     </li>
                     <li>
-                        <img
-                            src="images/main/portoflio/9growing.jpg"
-                            alt="Laptop z wyswietlona strona internetowa"
-                            width="370px"
-                            height="294px"
-                        />
-                        <p>Growing Business</p>
-                        <p>Aplikacja</p>
+                        <div>
+                            <img
+                                src="images/main/portoflio/9growing.jpg"
+                                alt="Laptop z wyswietlona strona internetowa"
+                                width="370px"
+                                height="294px"
+                            />
+                            <p class="product-name">Growing Business</p>
+                            <p class="product-field">Aplikacja</p>
+                        </div>
                     </li>
                 </ul>
             </section>
         </main>
         <footer>
-            <h3><span>Web</span>Studio</h3>
-            <address>
-                m. Warszawa, Aleje Jerozolimskie 21 <br />
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-                <a href="tel:+48111111111">+48 111 111 111</a>
+            <a href="#" class="logo"
+                ><h3 class="logo"><span class="logo-color">Web</span>Studio</h3>
+            </a>
+            <address class="address-text">
+                m. Warszawa, Aleje Jerozolimskie 21
+
+                <a href="mail:info@devstudio.com" class="contact-link"
+                    >info@devstudio.com</a
+                >
+                <a href="tel:+48111111111" class="contact-link"
+                    >+48 111 111 111</a
+                >
             </address>
         </footer>
     </body>
