portfolio.html update

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <!--sekcja pierwsza-->
             <section id="agencja">
                 <h1 class="main-claim">
-                    efektywne rozwiązania dla waszego biznesu
+                    efektywne rozwiązania <br />dla waszego biznesu
                 </h1>
                 <button type="button" class="first-cta">Zamów usługe</button>
             </section>
@@ -148,7 +148,7 @@
             </section>
         </main>
         <footer>
-            <a href="#" class="logo-footer"
+            <a href="#" class="logo-header"
                 ><h3 class="logo"><span class="logo-color">Web</span>Studio</h3>
             </a>
             <address class="address-text">
