--- a/portfolio.html
+++ b/portfolio.html
@@ -5,17 +5,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="CSS/styles.css" />
+
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
             rel="stylesheet"
         />
+        <link rel="stylesheet" href="CSS/styles.css" />
     </head>
     <body>
         <header>
-            <a href="index.html" class="logo">
+            <a href="index.html" class="logo-header">
                 <h3><span class="logo-color">Web</span>Studio</h3></a
             >
             <nav>
@@ -35,15 +36,29 @@
         <main>
             <ul>
                 <li>
-                    <button type="button" class="pointer">Wszystkie</button>
+                    <button type="button" class="portfolio-filter pointer">
+                        Wszystkie
+                    </button>
                 </li>
-                <li><button type="button" class="pointer">Strony</button></li>
                 <li>
-                    <button type="button" class="pointer">Aplikacje</button>
+                    <button type="button" class="portfolio-filter pointer">
+                        Strony
+                    </button>
                 </li>
-                <li><button type="button" class="pointer">Dizajn</button></li>
                 <li>
-                    <button type="button" class="pointer">Marketing</button>
+                    <button type="button" class="portfolio-filter pointer">
+                        Aplikacje
+                    </button>
+                </li>
+                <li>
+                    <button type="button" class="portfolio-filter pointer">
+                        Dizajn
+                    </button>
+                </li>
+                <li>
+                    <button type="button" class="portfolio-filter pointer">
+                        Marketing
+                    </button>
                 </li>
             </ul>
             <section>
@@ -53,8 +68,8 @@
                             <img
                                 src="images/main/portoflio/1technologia.jpg"
                                 alt="Laptop z wyswietlona strona internetowa"
-                                width="370px"
-                                height="294px"
+                                width="370"
+                                height="294"
                             />
                             <p class="product-name">Technocrack</p>
                             <p class="product-field">Strona internetowa</p>
@@ -65,8 +80,8 @@
                             <img
                                 src="images/main/portoflio/2grafika.jpg"
                                 alt="Laptop z wyswietlona strona internetowa"
-                                width="370px"
-                                height="294px"
+                                width="370"
+                                height="294"
                             />
                             <p class="product-name">
                                 Grafika New Orlean vs Golden Star
@@ -79,8 +94,8 @@
                             <img
                                 src="images/main/portoflio/3restauracja.jpg"
                                 alt="Laptop z wyswietlona strona internetowa"
-                                width="370px"
-                                height="294px"
+                                width="370"
+                                height="294"
                             />
                             <p class="product-name">Restauracja Seafood</p>
                             <p class="product-field">Aplikacja</p>
@@ -103,8 +118,8 @@
                             <img
                                 src="images/main/portoflio/5projektbox.jpg"
                                 alt="Laptop z wyswietlona strona internetowa"
-                                width="370px"
-                                height="294px"
+                                width="370"
+                                height="294"
                             />
                             <p class="product-name">Projekt Boxes</p>
                             <p class="product-field">Aplikacja</p>
@@ -115,8 +130,8 @@
                             <img
                                 src="images/main/portoflio/6inspiration.jpg"
                                 alt="Laptop z wyswietlona strona internetowa"
-                                width="370px"
-                                height="294px"
+                                width="370"
+                                height="294"
                             />
                             <p class="product-name">
                                 Inspiration has no Borders
@@ -129,8 +144,8 @@
                             <img
                                 src="images/main/portoflio/7magazyn.jpg"
                                 alt="Laptop z wyswietlona strona internetowa"
-                                width="370px"
-                                height="294px"
+                                width="370"
+                                height="294"
                             />
                             <p class="product-name">Magazyn Limited Edition</p>
                             <p class="product-field">Dizajn</p>
@@ -141,8 +156,8 @@
                             <img
                                 src="images/main/portoflio/8projektlab.jpg"
                                 alt="Laptop z wyswietlona strona internetowa"
-                                width="370px"
-                                height="294px"
+                                width="370"
+                                height="294"
                             />
                             <p class="product-name">Projekt LAB</p>
                             <p class="product-field">Marketing</p>
@@ -153,8 +168,8 @@
                             <img
                                 src="images/main/portoflio/9growing.jpg"
                                 alt="Laptop z wyswietlona strona internetowa"
-                                width="370px"
-                                height="294px"
+                                width="370"
+                                height="294"
                             />
                             <p class="product-name">Growing Business</p>
                             <p class="product-field">Aplikacja</p>
@@ -164,7 +179,7 @@
             </section>
         </main>
         <footer>
-            <a href="#" class="logo"
+            <a href="index.html" class="logo-header"
                 ><h3 class="logo"><span class="logo-color">Web</span>Studio</h3>
             </a>
             <address class="address-text">
