--- a/portfolio.html
+++ b/portfolio.html
@@ -106,8 +106,8 @@
                             <img
                                 src="images/main/portoflio/4projektprime.jpg"
                                 alt="Laptop z wyswietlona strona internetowa"
-                                width="370px"
-                                height="294px"
+                                width="370"
+                                height="294"
                             />
                             <p class="product-name">Projekt Prime</p>
                             <p class="product-field">Marketing</p>
